podvolume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: example-pod
spec:
  containers:
  - name: example-container
    image: nginx
    volumeMounts:
    - mountPath: /usr/share/nginx/html
      name: example-volume
      
  volumes:
  - name: example-volume
    persistentVolumeClaim:
      claimName: example-pvc
