headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  clusterIP: None 
  selector:
    app: myapp
  ports:
  - port: 80
    name: web
    targetPort: 80
