nginx-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mystatefulset
spec:
  selector:
    matchLabels:
      app: myapp
  serviceName: myapp
  replicas: 2
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: nginx
        ports:
        - containerPort: 80
          name: web
        volumeMounts:
        - name: www
          mountPath: /usr/share/nginx/html
  volumeClaimTemplates:
  - metadata:
      name: www
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi

---
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  clusterIP: None 
  selector:
    app: myapp
  ports:
  - port: 80
    name: web
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mystatefulset-service
spec:
  type: NodePort
  selector:
    statefulset.kubernetes.io/pod-name: mystatefulset-0
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
